--- a/src/components/swiper/styles.css
+++ b/src/components/swiper/styles.css
@@ -1,3 +1,12 @@
+#app {
+  height: 100%;
+}
+html,
+body {
+  position: relative;
+  height: 100%;
+}
+
 body {
   background: #eee;
   font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
@@ -7,14 +16,13 @@ body {
   padding: 0;
 }
 
-.swiper {
-  height: 420px;
+.mySwiperHeader {
   width: 96%;
+  height: 400px;
   border-radius: 15px;
   margin-bottom: 25px;
   margin-top: 40px;
-  z-index: -1;
-  /* position: relative; */
+  z-index: 0;
 }
 
 .swiper-slide {
@@ -24,7 +32,6 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  /* z-index: 1; */
 }
 
 .swiper-slide img {
@@ -32,4 +39,10 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+@media (max-width: 1160px) {
+  .mySwiperHeader {
+    height: 300px;
+  }
 }
